--- a/Src/Presentation/BradyWeather.Blazor.Server/appsettings.Development.json
+++ b/Src/Presentation/BradyWeather.Blazor.Server/appsettings.Development.json
@@ -10,6 +10,6 @@
   },
   "Web:WeatherApi": {
     "BaseAddress": "http://dataservice.accuweather.com",
-    "ApiKey": "<YourKeyGoesHere>"
+    "ApiKey": "<mlqVyXg9K7ifXiftwFCKYGZAwGgmlWPp>"
   }
 }
