--- a/Src/Presentation/BradyWeather.Blazor.Server/appsettings.json
+++ b/Src/Presentation/BradyWeather.Blazor.Server/appsettings.json
@@ -8,6 +8,6 @@
   "AllowedHosts": "*",
   "Web:WeatherApi": {
     "BaseAddress": "http://dataservice.accuweather.com",
-    "ApiKey": "<mlqVyXg9K7ifXiftwFCKYGZAwGgmlWPp>"
+    "ApiKey": "mlqVyXg9K7ifXiftwFCKYGZAwGgmlWPp"
   }
 }
